# CardinalDB

./: .gitignore  CMakeLists.txt  README.md
include/CardinalDB/: Configuration.h  Configuration.h.in  TypeDeclaration.h
source/: CMakeLists.txt
source/Internal/SQL/: Lexer.h  Parser.h  Token.h
source/Internal/SQL/Query/: DDL.h  DML.h  List.h  Query.h  TCL.h
source/SQL/: Lexer.c  Parser.c
source/SQL/Query/: DDL.c  List.c  Query.c  TCL.c
testing/: CMakeLists.txt
testing/SQL/: Lexer.c  Parser.c
tools/: CMakeLists.txt  GenerateKeywordHash.c
